public/css/index.css
.index__main-container {
	width: 100%;
	/* min-height: 80vh; */
	display: flex;
}

.folder-container {
	width: 80%;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.sidebar-container {
	padding: 20px;
	width: 15vw;
	min-width: 250px;
	height: 90vh;
	display: flex;
	flex-direction: column;
	gap: 10px;
	border-right: 1px solid var(--color-gray);
}

.sidebar-button {
	font-size: 14px;
	border-radius: 3px;
	font-family: inherit;
	text-align: left;
	border: none;
	padding: 10px 10px;
	color: var(--color-light-gray);
	background-color: var(--background-black);
	outline: 1px solid var(--color-gray);
	cursor: pointer;
	text-decoration: none;
	display: flex;
	justify-content: flex-start;
	align-items: center;
}

.sidebar-button:hover {
	background-color: var(--color-hover-background);
	color: var(--color-hover);
	outline: 1px solid var(--color-hover);
}

.sidebar-button > img {
	width: 20px;
	height: 20px;
	margin-right: 10px;
	object-position: center;
}

.folder-button {
	width: 100%;
	display: flex;
	justify-content: flex-start;
	align-items: center;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.sidebar-break {
	margin-top: 15px;
	margin-bottom: 15px;
	border: none;
	border-bottom: 1px dashed var(--font-color);
}

.selected-folder {
	background-color: var(--color-gray);
}

.filesview-container {
	padding: 20px;
	width: 100%;
}

.filesview-wrapper {
	display: flex;
	flex-direction: column;
	height: 100%;
	gap: 10px;
}

.filesview-row {
	display: flex;
	align-items: center;
	justify-content: space-around;
	cursor: pointer;
}

.filesview-row:nth-child(1) {
	margin-bottom: 10px;
}

.filesview-row > p {
	padding: 10px;
	color: var(--color-light-gray);
}

.filesview-header > p {
	color: var(--font-color);
}

.filesview-header > p:hover {
	border-radius: var(--border-radius-default);
	background-color: var(--color-gray);
}

/* for the heading */
.filesview-row > p:nth-child(1) {
	width: 60%;
}

.filesview-row > p:nth-child(2) {
	width: 20%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.filesview-row > p:nth-child(3) {
	width: 20%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.filesview-content {
	background-color: var(--background-black);
	border-radius: var(--border-radius-default);
	outline: 1px solid var(--color-gray);
	text-decoration: none;
	color: var(--font-color);
}

/* for image and  name*/
.filesview-content > div {
	width: 60%;
	display: flex;
	justify-content: flex-start;
	align-items: center;
	gap: 10px;
	padding: 10px;
}

.filesview-content > div > img {
	width: 20px;
	height: 20px;
}

.filesview-content:hover {
	background-color: var(--color-hover-background);
	color: var(--color-hover);
	outline: 1px solid var(--color-hover);
}

.filesview-content > div > p {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.filesview-content > p {
	display: flex;
	justify-content: center;
	align-items: center;
}

/* classes for file path */

.file-path-indicator {
	margin-bottom: 20px;
}

.file-path-seprator {
	margin: 0px 5px;
	font-weight: 100;
}

.file-path-link {
	font-weight: 900;
	font-size: 14px;
	text-decoration: none;
	color: var(--color-hover);
}

.file-path-link:hover {
	text-decoration: underline;
}

.current-file-path {
	color: var(--color-light-gray);
}

.no-file-no-folder-para {
	width: 100%;
	height: 30vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

.toast-notification {
	position: absolute;
	top: 10px;
	right: 10px;
	width: 30rem;
	border-radius: var(--border-radius-default);
	background-color: var(--background-color-dialog);
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border-top: 0.2rem solid var(--color-hover);
	padding: 20px;
	display: flex;
	justify-content: flex-start;
	align-items: center;
}

.toast-warning-icon {
	width: 2rem;
	height: 2rem;
	margin-right: 1rem;
}

.toast-message {
	color: var(--font-color);
	overflow-wrap: break-word;
}

.show-toast {
	display: flex;
}

.hide-toast {
	display: none;
}

@media screen and (max-width: 1250px) {
	body {
		margin-bottom: 10vh;
	}

	.index__main-container {
		flex-direction: column-reverse;
		min-height: 92vh;
		justify-content: flex-end;
	}

	.sidebar-container {
		padding: 20px;
		position: fixed;
		bottom: 0;
		width: 100vw;
		height: 10vh;
		border-right: none;
		flex-direction: row;
		justify-content: center;
		border-top: 1px solid var(--color-gray);
		background-color: var(--background-black);
	}

	.sidebar-button {
		width: 100px;
		display: flex;
		justify-content: center;
		align-items: center;
	}

	.sidebar-button > p {
		display: none;
	}

	.sidebar-button > img {
		margin-right: 0px;
	}

	.folder-button,
	.sidebar-break,
	.folder-container {
		display: none;
	}
}

